cosmetic improvements